correct option name in sub-head.
Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

--- a/modules/ROOT/partials/configuration/highlight_on_focus.adoc
+++ b/modules/ROOT/partials/configuration/highlight_on_focus.adoc
@@ -13,7 +13,7 @@ This allows users to clearly see when the editor is in focus, or which editor ha
 
 *Possible values:* `+true+`, `+false+`
 
-=== Example: using `+hidden_input+`
+=== Example: using `+highlight_on_focus+`
 
 [source,js]
 ----
