--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -25,12 +25,11 @@ liveDemo::{plugincode}[]
 
 == Basic setup
 
-To setup the {pluginname} plugin in the editor
+To setup the {pluginname} plugin user-interface in the editor
 
 * add `{plugincode}` to the `plugins` option in the editor configuration;
 
 * add `inserttemplate` and `addtemplate` to the `toolbar` option in the editor configuration;
-
 
 For example:
 
@@ -64,6 +63,9 @@ tinymce.init({
   }
 });
 ----
+
+NOTE: The above example only demonstrates the {pluginname} user interface. An xref:#advtemplate_list[`advtemplate_list`] option has been added, with an included function returning a promise that contains a basic Template structure. This allows the {pluginname} user interface to load and present in a {productname} editor instance. This basic setup example cannot create, edit, or save new {pluginname} items.
+
 
 == Options
 
