Re-write for clarity
The re-write makes it explicit what can be moved and what it is moved to.

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

--- a/modules/ROOT/partials/configuration/advtemplate_move_category_items.adoc
+++ b/modules/ROOT/partials/configuration/advtemplate_move_category_items.adoc
@@ -1,7 +1,7 @@
 [[advtemplate_move_category_items]]
 == `advtemplate_move_category_items`
 
-This option moves Template categories to a different Template category.
+This option moves all Templates in one category to a different Template category.
 
 *Type:* `+String+`
 
