--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -31,6 +31,7 @@ To setup the {pluginname} plugin user-interface in the editor
 
 * add `inserttemplate` and `addtemplate` to the `toolbar` option in the editor configuration;
 
+* add each Advanced Template option to the editor configuration;
 For example:
 
 [source,js]
