DOC-1912: advanced-templates.adoc
Replaced two instances of ‘Advanced Template’ with attribute, {pluginname}.

--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -16,7 +16,7 @@ The {pluginname} Premium plugin enables the creation of complex, interactive tem
 
 They can also be added to a {productname} instance by end-users selecting content in a {productname} document and saving the selection as a template via the {productname} user-interface.
 
-IMPORTANT: This initial Advanced Template release does not support template editing. To update a particular template; insert the template into an editor; make edits; select the, now edited, content; and then create a new template (using, for example, the *Tools > Save as Template…* menu item).
+IMPORTANT: This initial {pluginname} release does not support template editing. To update a particular template; insert the template into an editor; make edits; select the, now edited, content; and then create a new template (using, for example, the *Tools > Save as Template…* menu item).
 
 ////
 == Interactive example
@@ -32,7 +32,7 @@ To setup the {pluginname} plugin user-interface in the editor
 
 * add `inserttemplate` and `addtemplate` to the `toolbar` option in the editor configuration;
 
-* add each Advanced Template option to the editor configuration;
+* add each {pluginname} option to the editor configuration;
 For example:
 
 [source,js]
