DOC-1912: advtemplate_list.adoc
Edited introductory description sentence.

--- a/modules/ROOT/partials/configuration/advtemplate_list.adoc
+++ b/modules/ROOT/partials/configuration/advtemplate_list.adoc
@@ -1,7 +1,7 @@
 [[advtemplate_list]]
 == `advtemplate_list`
 
-This option retrieves the list of available Templates.
+This option retrieves the list of templates to be displayed in the *Insert Template* dialog
 
 *Type:* see the example below
 
