--- a/modules/ROOT/pages/6.4.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.1-release-notes.adoc
@@ -913,7 +913,7 @@ In {productname} 6.4.1, two new key overrides have been added to address the sec
 === Visual characters were rendered inside noneditable elements
 //#TINY-9474
 
-In previous versions of {productname}, a bug was found that affected the `visual characters` plugin. As a consequence, the visual characters selector would render inside `contenteditable="false"` elements after the plugin was applied to the editor.
+In previous versions of {productname}, a bug was found that affected the `visual characters` plugin. The visual characters would be rendered within an `contenteditable="false"` element.
 
 To fix this issue, a conditional filter was added which identifies, if an element is either a `contenteditable="true"` element or a `contenteditable="false"` element to its decendants.  If the element matches as a `contenteditable="false"` element to itself or decendants, the `visual character` plugin will remove the highlighted selecter from within the `dom` viewport.
 
