--- a/modules/ROOT/pages/6.4.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.1-release-notes.adoc
@@ -915,7 +915,8 @@ In {productname} 6.4.1, two new key overrides have been added to address the sec
 
 In previous versions of {productname}, a bug was found that affected the `visual characters` plugin. The visual characters would be rendered within an `contenteditable="false"` element.
 
-To fix this issue, a conditional filter was added which identifies, if an element is either a `contenteditable="true"` element or a `contenteditable="false"` element to its decendants.  If the element matches as a `contenteditable="false"` element to itself or decendants, the `visual character` plugin will remove the highlighted selecter from within the `dom` viewport.
+In order to address this problem, improvements were made to better detect noneditable context, when an element is identified as a `contenteditable="false"` element, either by itself or through its descendants.
+
 
 As a result, in {productname} 6.4.1, visual characters no longer render inside `contenteditable="false"` elements.
 
