--- a/modules/ROOT/pages/6.4.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.1-release-notes.adoc
@@ -827,7 +827,7 @@ In {productname} 6.4.1, pasting links to text selections now generates the corre
 === Toolbar split buttons in *Advanced List* plugin to show the correct state when the cursor is in a checklist
 //#TINY-5167
 
-In previous versions of {productname}, when a cursor was placed within a checklist item, the icon for both the checklist and the bullet list would show as `active`. This created UX issues, as having both buttons showing an `active` state was confusing for the user, specifically for navigation purposes when using checklists from the *Advanced List* plugin.
+In previous versions of {productname}, when a cursor was placed within a checklist item, the icon for both the checklist and the bullet list would show as `active`. This created UX issues, as having both buttons showing an `active` state was confusing for the user, specifically for navigation purposes when using *Advanced List* plugin and checklists from the *Checklist* plugin.
 
 To fix this issue, {productname} updates the logic to prevent setting the bullet list to `active` when the cursor is in a checklist.
 
